@@ -1,0 +1,55 @@
+/**
+ * Copyright (c) 2002-2013 "Neo Technology,"
+ * Network Engine for Objects in Lund AB [http://neotechnology.com]
+ *
+ * This file is part of Neo4j.
+ *
+ * Neo4j is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+package org.neo4j.cypher.internal.pipes
+
+import org.neo4j.cypher.internal.ExecutionContext
+import org.neo4j.cypher.internal.commands.{CreateIndex, IndexOperation}
+import org.neo4j.cypher.SyntaxException
+
+class IndexOperationPipe(source: Pipe, indexOp: IndexOperation) extends Pipe {
+  def createResults(state: QueryState) = {
+    val queryContext = state.queryContext
+    val result: Iterator[ExecutionContext] = source.createResults(state).map { (ctx: ExecutionContext) =>
+
+      val labelId = queryContext.getOrCreateLabelId(indexOp.label)
+
+      indexOp match {
+        case CreateIndex(_, propertyKeys, _) =>
+          val propertyKeyIds: Seq[Long] = propertyKeys.map( queryContext.getOrCreatePropertyKeyId(_) )
+          queryContext.addIndexRule(labelId, single(propertyKeyIds))
+        case _ =>
+          throw new UnsupportedOperationException("Unknown IndexOperation encountered")
+      }
+      ctx
+    }
+
+    result
+  }
+
+  private def single[T](s: Seq[T]): T = {
+    if (s.isEmpty || !s.tail.isEmpty)
+      throw new SyntaxException("Cypher support only one property key per index right now")
+    s(0)
+  }
+
+  def symbols = source.symbols
+
+  def executionPlanDescription() = s"IndexOperationsPipe(${indexOp})"
+}
