@@ -22,6 +22,7 @@ package org.neo4j.kernel.impl.api;
 import org.neo4j.graphdb.NotInTransactionException;
 import org.neo4j.kernel.api.ConstraintViolationKernelException;
 import org.neo4j.kernel.api.LabelNotFoundKernelException;
+import org.neo4j.kernel.api.PropertyKeyNotFoundException;
 import org.neo4j.kernel.api.StatementContext;
 
 public class ReadOnlyStatementContext implements StatementContext
@@ -91,6 +92,18 @@ public class ReadOnlyStatementContext implements StatementContext
     public Iterable<Long> getIndexRules( long labelId )
     {
         return delegate.getIndexRules( labelId );
+    }
+
+    @Override
+    public long getOrCreatePropertyKeyId( String propertyKey )
+    {
+        throw readOnlyException();
+    }
+
+    @Override
+    public long getPropertyKeyId( String propertyKey ) throws PropertyKeyNotFoundException
+    {
+        return delegate.getPropertyKeyId( propertyKey );
     }
 
     @Override
