@@ -2,7 +2,8 @@
 ---
 o Added the possibility to add/remove labels to nodes
 o Now uses the labels specified in MATCH while matching
-* Supports label matching with or ("|") syntax in MATCH
+o Supports label matching with or ("|") syntax in MATCH
+o Added the possibility to add label-based indexes
 
 1.9.RC
 ------
